--- a/data_to_csv.ipynb
+++ b/data_to_csv.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "mne.io.read_raw_edf(dataset[0])."
+    "mne.io.read_raw_edf(dataset[0]).git "
    ],
    "metadata": {
     "collapsed": false,
