--- a/data_to_csv.ipynb
+++ b/data_to_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import mne\n",
@@ -19,19 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
+    "import numpy as np\n",
     "fileDir = r\"E:\\ubuntu\\dataset\"\n",
     "fileExt = \"**\\*.edf\"\n",
-    "dataset = [str(i) for i in list(pathlib.Path(fileDir).glob(fileExt))]"
+    "dataset = [str(i) for i in list(pathlib.Path(fileDir).glob(fileExt))]\n",
+    "\n",
+    "len(dataset)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -39,47 +42,39 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "#94에러 242 243 357\n",
+    "for i in range( 358,len(dataset)):\n",
+    "    print(i)\n",
+    "    raw = mne.io.read_raw_edf(dataset[i])\n",
+    "    data = raw.get_data(return_times=True)\n",
+    "    channels = raw.ch_names\n",
+    "    T_data = np.transpose(data[0])\n",
+    "    time = np.transpose(data[1])\n",
+    "    temp = pd.DataFrame(T_data, columns = channels, index = time)\n",
+    "    fname = dataset[i].split(\"\\\\\")[-1]\n",
+    "    temp.to_excel(\"Z:/Dataset/TUH/{}.xlsx\".format(fname), index_label=\"time\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting EDF parameters from E:\\ubuntu\\dataset\\000\\00000001\\s001_2002_12_30\\00000001_s001_t000.edf...\n",
-      "EDF file detected\n",
-      "Setting channel info structure...\n",
-      "Creating raw.info structure...\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'RawEDF' object has no attribute 'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-5-5e3a17eba64d>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mmne\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mio\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mread_raw_edf\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdataset\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m: 'RawEDF' object has no attribute 'data'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "mne.io.read_raw_edf(dataset[0]).git "
+    "fname"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
