--- a/data_to_csv.ipynb
+++ b/data_to_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import mne\n",
@@ -19,8 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "12801"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -33,18 +42,29 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385\n",
+      "Extracting EDF parameters from E:\\ubuntu\\dataset\\001\\00000159\\s001_2003_03_31\\00000159_s001_t017.edf...\n",
+      "EDF file detected\n",
+      "Setting channel info structure...\n",
+      "Creating raw.info structure...\n"
+     ]
+    }
+   ],
    "source": [
-    "#94에러 242 243 357\n",
-    "for i in range( 358,len(dataset)):\n",
+    "#94에러 242 243 357 367 385\n",
+    "for i in range( 385,len(dataset)):\n",
     "    print(i)\n",
     "    raw = mne.io.read_raw_edf(dataset[i])\n",
     "    data = raw.get_data(return_times=True)\n",
@@ -73,8 +93,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
